1.1/readme.md

# Домашнее задание к занятию «Знакомство с C++»

Курс начинается с разработки простой программы и освоения на практике самых простых операций.

### Цель задания

Написать первую программу.

### Подготовка к выполнению домашнего задания

Для выполнения задания и прохождения курса нужен компьютер с операционной системой Windows, macOS или Linux и установленной на нём последней версией браузера Google Chrome.

### Инструкция по выполнению домашнего задания

В этом курсе рекомендуем вам использовать среду разработки Giga IDE и систему контроля версий GitVerse или GitHub (если знакомы с этим инструментом или находитесь не на территории РФ):

- [инструкция по установке Giga IDE](https://gitverse.ru/netology/Instructions/content/master/GigaIDE/installation.md).
- [загрузка файлов на GitVerse](https://netospace.ru/drive/d/s/11xdm1agxRe2dwMDGrLExhoukySBNewg/91RB2G9FteFqXCvbnoGY3Jp-09EyPCaR-cL1AP0IoBAw)
- [загрузка файлов на GitHub](https://netospace.ru/drive/drive/d/s/127U73eMwa1mXJIqAcqNH6IpzVDuCWcs/gePawWrhKYzS87DinJ5NfuRitcKzdeMB-pragJ77JCww)
  
В Giga IDE создавайте проекты и пишите код. В GitVerse/GitHub загружайте файлы.
Чтобы сдать задание на проверку, загрузите  .cpp файл на GitVerse/GitHub и прикрепите ссылку в личном кабинете.

## Чтобы скачать/открыть файлы проекта:

- нажмите правой кнопкой мыши на файлы проекта в Giga IDE
- выберите "Открыть по адресу"
- нажмите на "Средство поиска"

Вы откроете папку с файлами проекта, которые можно приложить в личном кабинете или загрузить на GitHub или GitVerse.

-----

Вам будут встречаться два типа заданий в домашней работе: 

- без звёздочки. 
- со звёздочкой (*). 

Задания без звёздочки обязательны к выполнению и необходимы для получения зачёта.

Задания со звёздочкой дополнительные или повышенной сложности. Выполнять их не обязательно, но работа над ними поможет вам глубже понять тему.

-----

После каждой лекции вы будете получать домашнее задание, которое состоит из 1-4 задач для самостоятельной работы. Чтобы их решить, нужны как знания, которые вы получили на лекции, так и навык поиска информации в интернете — самый важный навык программиста.

Любые вопросы по решению задач задавайте в чате курса.


------

### Задание 1
Написать первую программу. Подробное описание задания [по ссылке](01).

------

### Критерии оценки домашнего задания

1. В личном кабинете прикреплены ссылки на GitVerse/GitHub с кодом для задания 1.
2. В ссылке содержится код, который при запуске выполняет описанный в задании алгоритм.
