1.4/readme.md
# Домашнее задание к занятию «Циклические конструкции»

Выполнив это задание, вы сможете в дальнейшем уверенно использовать такие циклические конструкции, как `while`, `do...while` и `for`. Также вы поймёте, как разбирать числа на отдельные цифры, и научитесь взаимодействовать с пользователем.

### Цель задания

1. Научиться работать с циклами.
2. Научиться раскладывать числа на цифры.
3. Научиться считывать пользовательский ввод до тех пор, пока он не введёт что-то особенное.

### Подготовка к выполнению домашнего задания

Для выполнения задания и прохождения курса нужен компьютер с операционной системой Windows, macOS или Linux и установленной на нём последней версией браузера Google Chrome.

### Инструкция по выполнению домашнего задания

В этом курсе рекомендуем вам использовать среду разработки Giga IDE и систему контроля версий GitVerse или GitHub (если знакомы с этим инструментом или находитесь не на территории РФ):

- [инструкция по установке Giga IDE](https://gitverse.ru/netology/Instructions/content/master/GigaIDE/installation.md).
- [загрузка файлов на GitVerse](https://github.com/netology-code/java-homeworks/blob/java-43/GITVERSE.md)
- [загрузка файлов на GitHub](https://github.com/netology-code/java-homeworks/blob/java-43/GITHUB.md)
  
В Giga IDE создавайте проекты и пишите код. В GitVerse/GitHub загружайте файлы.
Чтобы сдать задание на проверку, загрузите  .cpp файл на GitVerse/GitHub и прикрепите ссылку в личном кабинете.

## Чтобы скачать/открыть файлы проекта:

- нажмите правой кнопкой мыши на файлы проекта в Giga IDE
- выберите "Открыть по адресу"
- нажмите на "Средство поиска"

Вы откроете папку с файлами проекта, которые можно приложить в личном кабинете или загрузить на GitHub или GitVerse.

-----

Вам будут встречаться два типа заданий в домашней работе: 

- без звёздочки. 
- со звёздочкой (*). 

Задания без звёздочки обязательны к выполнению и необходимы для получения зачёта.

Задания со звёздочкой дополнительные или повышенной сложности. Выполнять их не обязательно, но работа над ними поможет вам глубже понять тему.

-----

После каждой лекции вы будете получать домашнее задание, которое состоит из 1-4 задач для самостоятельной работы. Чтобы их решить, нужны как знания, которые вы получили на лекции, так и навык поиска информации в интернете — самый важный навык программиста.

Любые вопросы по решению задач задавайте в чате курса.

------

### Задание 1

[Сумматор](01).

### Задание 2

[Сумма цифр числа](02).

### Задание 3

[Таблица умножения для числа](03).

------

### Правила приёма домашней работы

Чтобы сдать домашнее задание, прикрепите в личном кабинете ссылку на ваш repl.

### Критерии оценки домашней работы

1. В личном кабинете прикреплены ссылки на GitVerse/GitHub с кодом для заданий 1, 2 и 3.
2. В ссылке содержится код, который при запуске выполняет описанный в задании алгоритм.
